--- a/about_us.html
+++ b/about_us.html
@@ -17,19 +17,19 @@
         <nav class="header-nav">
             <ul class="header-nav-list">
                 <li class="header-nav-list__item">
-                    <a href="#" class="header-nav-list__link">Главная</a>
+                    <a href="index.html" class="header-nav-list__link">Главная</a>
                 </li>
                 <li class="header-nav-list__item">
-                    <a href="#" class="header-nav-list__link">Услуги</a>
+                    <a href="service.html" class="header-nav-list__link">Услуги</a>
                 </li>
                 <li class="header-nav-list__item">
                     <a href="#" class="header-nav-list__link">Проекты</a>
                 </li>
                 <li class="header-nav-list__item">
-                    <a href="#" class="header-nav-list__link">О нас</a>
+                    <a href="about_us.html" class="header-nav-list__link">О нас</a>
                 </li>
                 <li class="header-nav-list__item">
-                    <a href="#" class="header-nav-list__link">Блог</a>
+                    <a href="blog.html" class="header-nav-list__link">Блог</a>
                 </li>
             </ul>
         </nav>
@@ -353,16 +353,16 @@
                     <a href="#" class="footer-nav-list__item-link">Проекты</a>
                 </li>
                 <li class="footer-nav-list__item">
-                    <a href="#" class="footer-nav-list__item-link">Услуги</a>
+                    <a href="service.html" class="footer-nav-list__item-link">Услуги</a>
                 </li>
                 <li class="footer-nav-list__item">
-                    <a href="#" class="footer-nav-list__item-link">Агенство</a>
+                    <a href="about_us.html" class="footer-nav-list__item-link">Агенство</a>
                 </li>
                 <li class="footer-nav-list__item">
-                    <a href="#" class="footer-nav-list__item-link">Блог</a>
+                    <a href="blog.html" class="footer-nav-list__item-link">Блог</a>
                 </li>
                 <li class="footer-nav-list__item">
-                    <a href="#" class="footer-nav-list__item-link">Контакты</a>
+                    <a href="contact.html" class="footer-nav-list__item-link">Контакты</a>
                 </li>
             </ul>
         </nav>
