--- a/service-advertising.html
+++ b/service-advertising.html
@@ -17,19 +17,19 @@
             <nav class="header-nav">
                 <ul class="header-nav-list">
                     <li class="header-nav-list__item">
-                        <a href="#" class="header-nav-list__link">Главная</a>
+                        <a href="index.html" class="header-nav-list__link">Главная</a>
                     </li>
                     <li class="header-nav-list__item">
-                        <a href="#" class="header-nav-list__link">Услуги</a>
+                        <a href="service.html" class="header-nav-list__link">Услуги</a>
                     </li>
                     <li class="header-nav-list__item">
                         <a href="#" class="header-nav-list__link">Проекты</a>
                     </li>
                     <li class="header-nav-list__item">
-                        <a href="#" class="header-nav-list__link">О нас</a>
+                        <a href="about_us.html" class="header-nav-list__link">О нас</a>
                     </li>
                     <li class="header-nav-list__item">
-                        <a href="#" class="header-nav-list__link">Блог</a>
+                        <a href="blog.html" class="header-nav-list__link">Блог</a>
                     </li>
                 </ul>
             </nav>
@@ -49,10 +49,10 @@
                 </div>
                 <div class="wrapper-right">
                     <ul class="services-lists">
-                        <li class="services-items"><a href="#" class="services-name">Брендинг</a></li>
-                        <li class="services-items"><a href="#" class="services-name">Логотип</a></li>
+                        <li class="services-items"><a href="branding_services.html" class="services-name">Брендинг</a></li>
+                        <li class="services-items"><a href="service-logo.html" class="services-name">Логотип</a></li>
                         <li class="services-items"><a href="#" class="services-name">UI/UX design</a</li>
-                        <li class="services-items "><a href="#" class="services-name">Упаковка</a></li>
+                        <li class="services-items "><a href="service-pack.html" class="services-name">Упаковка</a></li>
                     </ul>
                     <div class="sml-info-service">
                             <div class="sml-info-service-text">
@@ -149,16 +149,16 @@
                         <a href="#" class="footer-nav-list__item-link">Проекты</a>
                     </li>
                     <li class="footer-nav-list__item">
-                        <a href="#" class="footer-nav-list__item-link">Услуги</a>
+                        <a href="service.html" class="footer-nav-list__item-link">Услуги</a>
                     </li>
                     <li class="footer-nav-list__item">
-                        <a href="#" class="footer-nav-list__item-link">Агенство</a>
+                        <a href="about_us.html" class="footer-nav-list__item-link">Агенство</a>
                     </li>
                     <li class="footer-nav-list__item">
-                        <a href="#" class="footer-nav-list__item-link">Блог</a>
+                        <a href="blog.html" class="footer-nav-list__item-link">Блог</a>
                     </li>
                     <li class="footer-nav-list__item">
-                        <a href="#" class="footer-nav-list__item-link">Контакты</a>
+                        <a href="contact.html" class="footer-nav-list__item-link">Контакты</a>
                     </li>
                 </ul>
             </nav>
